[package]
name = "fsrv"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
dunce = "1.0.5"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
